--- a/style/style.css
+++ b/style/style.css
@@ -31,14 +31,14 @@ font-size: 72px;
 font-weight: 900;
 width: 632px; 
 height: 190px;
-margin:   0px 344px 177px 344px;
+padding:    0px 344px 177px 344px;
 }
 /*main section*/
 .section-one{
     background-color: #FFF;
     width: 1600px;
     height: 7335px;
-    margin: auto;
+    margin: 50px auto;
 }
 .section-one-title{
     color: #F00;
@@ -65,4 +65,22 @@ margin: 50px auto;
     width: 802.9px;
     height: 500px;
     margin: auto 399px;
+}
+.section-two{
+    background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../image/Vectorrr.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 1320px;
+    height: 600px; 
+    margin:160px 140px 5039px 140px;
+}
+.section-two-title{
+    color: #FFF;
+font-size: 64px;
+font-weight: 900;
+letter-spacing: 7.04px; 
+width: 642px;
+}
+.section-two-pic{
+    padding: 0px 10px 400px 900px;
 }
