--- a/style/style.css
+++ b/style/style.css
@@ -219,3 +219,25 @@ line-height: 32px;
    .search-bun:hover {
     background: #ccc;
   }
+  .round-row {
+    display: flex;
+    margin: 200px 40px 0px 40px;
+    
+  }
+  
+  .column {
+    flex: 103.33%;
+  
+  }
+  .round {
+    border: 10px solid red;
+    border-radius: 50%;
+    padding: 20px;
+    margin:0px 20px 0px 8px;
+  }
+ footer{
+    color: #FFF;
+    width: 1800px;
+height: 7335px;
+background: black;
+ } 
