--- a/style/style.css
+++ b/style/style.css
@@ -223,6 +223,13 @@ line-height: 32px;
   .round-row{
     display: flex;
     margin: 300px 0px 0px 0px;
+    background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    padding: 10px;
+    
+    
+    border-radius: 10px;
+    
+    
   }
   .left{
     text-align: left;
@@ -236,6 +243,7 @@ line-height: 32px;
   
   .round {
     border: 40px solid red;
+    box-shadow: 10px 10px 5px grey;
     border-radius: 50%;
     padding: 40px;
     width: 463px fixed;
@@ -245,21 +253,68 @@ margin:0px 0px 0px 210px;
   .left-one{
     color: #F00;
     font-size: 20px;
+    text-shadow: 10px 10px 5px grey;
   }
   .left-two{
     color: blue;
+ text-shadow: 10px 10px 5px grey;
   }
   .left-three{
-    color: rgb(7, 226, 7);
+    color: rgb(7, 134, 7);
     font-size: 20px;
   }
   .right-one{
     color: orangered;
+    text-shadow: 10px 10px 5px grey;
   }
   .right-two{
-    color: rgb(33, 233, 33);
+    color: rgb(70, 33, 233);
     font-size: 16px;
   }
+  .discount{
+    display: flex;
+    padding: 130px;
+    border-radius: 10px;
+    background:#ffffff;
+    margin: 200px 0px 0px 0px;
+
+}
+.bonus-pic{
+    margin: 0px 130px 0px 225px;
+}
+.extra{
+    color: #F00;
+    text-shadow: 10px 10px 5px grey;
+}
+.bonus-one-intro{
+    color: #070211;
+    
+font-size: 24px;
+font-weight: 500;
+}
+.bonus-one-title{
+    color: black;
+    text-shadow: 10px 10px 5px grey;
+font-family: Merriweather;
+font-size: 72px;
+font-style: normal;
+font-weight: 900;
+line-height: normal;
+
+}
+.bonus-one-des{
+    color: rgba(27, 24, 226, 0.829);
+font-size: 20px;
+font-weight: 500;
+line-height: 32px;
+}
+.bonus-one{
+    margin:0px 8px 0px 0px ;
+}
+.bonus-two{
+    margin: 0px 0px 0px 204px;
+}
+/*footer section*/
  footer{
     color: #FFF;
 background: black;
@@ -329,6 +384,7 @@ font-weight: 500;
 line-height: 40px; 
 margin: 12px 0px 0px 0px;
 }
+
 
 
 
